tests/paczka2/big_fuzzy/54122934.err
Error in line 13: zNL3HT4E9Z A297 61,79
Error in line 14: zNL3HT4E9Z A297 97,8
Error in line 18: zNL3HT4E9Z A189 73,4
Error in line 20: A189 A189 17,7
Error in line 39: hAY56nEmr1 A370 84,0
Error in line 38: zNL3HT4E9Z A297 67,7
Error in line 42: hXhZplX A189 10,9
Error in line 44: zNL3HT4E9Z A189 5,5
Error in line 45: hXhZplX A669 0,3
Error in line 54: BmPWjY3s A189 20,8
Error in line 32: ukhpgRo8M A297 158,5
Error in line 79: hXhZplX A189 8,1
Error in line 101: A189 A669 94,2
Error in line 98: MIfn3 A297 88,3
Error in line 112: zNL3HT4E9Z A297 44,4
Error in line 114: zNL3HT4E9Z A189 14,1
Error in line 118: BmPWjY3s A297 86,8
Error in line 138: zNL3HT4E9Z A297 98,0
Error in line 135: A189 A297 74,7
Error in line 137: ukhpgRo8M A370 49,8
Error in line 152: hXhZplX A66* *,3
Error in line 139: hAY56nEmr1 A297 58,5
Error in line 153: hXhZplX A669 34,1
Error in line 155: zNL3HT4E9Z A297 11,5
Error in line 146: A189 A370 29,0
Error in line 161: zNL3HT4E9Z A189 20,7
Error in line 167: hAY56nEmr1 A189 2,6
Error in line 179: hXhZplX A297 53,1
Error in line 171: hAY56nEmr1 A370 22,8
Error in line 190: A189 A297 42,7
Error in line 188: ukhpgRo8M A370 66,9
Error in line 193: A189 A669 5,7
Error in line 204: hAY56nEmr1 Ay70 99,2
Error in line 197: zNL3HT4E9Z A669 59,0
Error in line 192: BmPWjY3s A189 304,2
Error in line 213: hXhZplX A370 7,6
Error in line 205: hAY56nEmr1 A370 46,6
Error in line 207: zNL3HT4E9Z A370 76,3
Error in line 224: zNL3HT4E9Z A297 8,2
Error in line 231: BmPWjY3s A189 64,5
Error in line 233: zNL3HT4E9Z A669 15,25
Error in line 230: A189 A669 57,7
